example/secondfile/objects/SPProduct__c.object
<CustomObject>
    <fields>
        <fullName>Discounted_Percentage__c</fullName>
        <description>1. If Percentage discount method is chosen:
a.  Populate the field based on “Discount Percentage” value
b.  Discounted Percentage = Discount Percentage
2.  If Fixed Price method is chosen:
a.  Populate the field based on
i.  Discounted Percentage = (List Price – Fixed Discounted Price) / (List Price) * 100</description>
        <label>Special Pricing Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discounted_Price__c</fullName>
        <label>Discounted Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Date_Scheduled__c</fullName>
        <label>Due Date (Scheduled)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EBM_Discount_Plan_Assignment_Status__c</fullName>
        <formula>TEXT(Deal__r.EBM_Discount_Plan_Assignment_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EBM Discount Plan Assignment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBM_Discount_Plan_Assignment_Status_p__c</fullName>
        <label>EBM Discount Plan Assignment Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBM_Discount_Plan_ID__c</fullName>
        <label>EBM Discount Plan ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECC_Estimated_Completion_Date__c</fullName>
        <label>ECC Estimated Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ENHANCED_FEATURES_List_Price__c</fullName>
        <label>ENHANCED FEATURES List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Customer_Name__c</fullName>
        <label>End Customer Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer__c</fullName>
        <formula>Deal__r.End_Customer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endcustomer_Status__c</fullName>
        <label>Endcustomer Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Shared</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enhanced_Features_Name__c</fullName>
        <defaultValue>&quot;None&quot;</defaultValue>
        <label>Enhanced Features Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enterprise_Viewer_per_study_charge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enterprise Viewer per study charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Equipment_Make__c</fullName>
        <label>Equipment Make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_Model__c</fullName>
        <label>Equipment Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_Price__c</fullName>
        <label>Equipment Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Est_of_user_per_month__c</fullName>
        <label>Est. # of user (per month)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ethernet_Type__c</fullName>
        <label>Ethernet Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exchange_Access_Date_Aging__c</fullName>
        <formula>IF(ISPICKVAL( Exchange_Access_Date_Status__c , &quot;Missed&quot;),  Originally_Scheduled_EAD__c - TODAY(), 
IF(ISPICKVAL(Exchange_Access_Date_Status__c , &quot;Escalated&quot;), Originally_Scheduled_EAD__c - TODAY(), 
IF(ISPICKVAL(Exchange_Access_Date_Status__c , &quot;Completed&quot;), Originally_Scheduled_EAD__c - Rescheduled_Firm_Order_Commitment__c, 
IF(ISPICKVAL(Exchange_Access_Date_Status__c , &quot;&quot;), Originally_Scheduled_EAD__c - TODAY(),null))))</formula>
        <label>Exchange Access Date Aging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exchange_Access_Date_JEOP_Code__c</fullName>
        <label>Exchange Access Date JEOP Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A43A</fullName>
                </value>
                <value>
                    <fullName>C01A</fullName>
                </value>
                <value>
                    <fullName>C01B</fullName>
                </value>
                <value>
                    <fullName>R45</fullName>
                </value>
                <value>
                    <fullName>R82</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exchange_Access_Date_Status__c</fullName>
        <label>Exchange Access Date Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Missed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclusivity_Period_Months__c</fullName>
        <label>Exclusivity Period (Months)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expedite_Indicator__c</fullName>
        <label>Expedite Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Promotion_Id__c</fullName>
        <label>External Promotion Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAN_Liability_Type__c</fullName>
        <label>FAN Liability Type</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAN_Name__c</fullName>
        <label>FAN Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facilitation_Contract_Id_ABSCON_ID__c</fullName>
        <label>Facilitation Contract Id (ABSCON ID)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federal_Tax_ID__c</fullName>
        <label>Federal Tax ID #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filtering_betw_MPLS_required_by_NBFW__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filtering betw MPLS required by NBFW?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Price__c</fullName>
        <label>Final Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Firewalls__c</fullName>
        <label>Firewalls</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Firm_Order_Commitment_Aging__c</fullName>
        <formula>IF(ISPICKVAL(Firm_Order_Commitment_Status__c , &quot;Missed&quot;),  Originally_Scheduled_FOC__c - TODAY(),
IF(ISPICKVAL(Firm_Order_Commitment_Status__c , &quot;Escalated&quot;), Originally_Scheduled_FOC__c - TODAY(),
IF(ISPICKVAL(Firm_Order_Commitment_Status__c , &quot;Completed&quot;), Originally_Scheduled_FOC__c -  Rescheduled_Firm_Order_Commitment__c,
IF(ISPICKVAL(Firm_Order_Commitment_Status__c , &quot;&quot;), Originally_Scheduled_FOC__c - TODAY(),null))))</formula>
        <label>Firm Order Commitment Aging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Firm_Order_Commitment_JEOP_Code__c</fullName>
        <label>Firm Order Commitment JEOP Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C94</fullName>
                </value>
                <value>
                    <fullName>J11O</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Firm_Order_Commitment_Status__c</fullName>
        <label>Firm Order Commitment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Missed</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Firm_Order_Date__c</fullName>
        <label>Firm Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flat_Discount_Value__c</fullName>
        <label>Flat Discount Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flat_Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flat Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Front_End_Connection_Speed__c</fullName>
        <label>Front-End Connection Speed</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GIOM_Order_Number__c</fullName>
        <label>GIOM Order Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRC_Service__c</fullName>
        <label>GRC (Service)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRID_Premise_ID__c</fullName>
        <label>GRID Premise ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Get_Provisioning_Status_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used to trigger the OutBound message to Cas Iron When EBM required to fetch the provisioning status.</description>
        <label>Get Provisioning Status Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_ID__c</fullName>
        <label>Group ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Quantity__c</fullName>
        <label>Group Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group_Total__c</fullName>
        <label>Group Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Groups_or_complex_Uauth_pol_supp_req__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Groups or complex Uauth pol supp req?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Handoff_Date__c</fullName>
        <label>Handoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>How_Many_Ports__c</fullName>
        <label>How Many Ports ?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_many_gateways_are_needed__c</fullName>
        <label>How many gateways are needed?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMEI_Number__c</fullName>
        <label>IMEI Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPFLEX__c</fullName>
        <formula>IF( IP_Flex_Reach_Plan_Name__c!=null,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IPFLEX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IP_Address_Range__c</fullName>
        <label>IP Address Range</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_FLEX_REACH_PLAN_List_Price__c</fullName>
        <label>IP FLEX REACH PLAN List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IP_Flex_Plan__c</fullName>
        <label>IP Flex Plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Flex_Reach_Plan_Name__c</fullName>
        <label>IP Flex Reach Plan Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Information_about_competing_offer__c</fullName>
        <label>Information about competing offer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Infosys_Process_Interval__c</fullName>
        <formula>ABS(Deal__r.Handoff_to_USRP__c  -   Deal__r.SOR_to_Provisioning__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Infosys Process Interval</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Data_Transfer_Amount__c</fullName>
        <label>Initial Data Transfer Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Data_Transfer_Price__c</fullName>
        <label>Initial Data Transfer Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Install_Due_Date__c</fullName>
        <label>Install Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interface_Type__c</fullName>
        <label>Interface Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsPricingScheduleRequested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPricingScheduleRequested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPromotional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPromotional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Active_IDS_IPS_service_required__c</fullName>
        <label>Is Active IDS/IPS service required?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Malware_Scanning_required__c</fullName>
        <label>Is Malware Scanning required?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_User_Level_Reporting_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is User Level Reporting required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Web_Filtering_required__c</fullName>
        <label>Is Web Filtering required?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_the_Route_Groups_feature_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is the &quot;Route Groups&quot; feature required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jep_Comments__c</fullName>
        <label>Jep Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LATA__c</fullName>
        <label>LATA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEC_Circuit_ID__c</fullName>
        <label>LEC Circuit ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Large_CPU_Limit__c</fullName>
        <label>Large - CPU Limit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Large_CPU_Reserved__c</fullName>
        <label>Large - CPU Reserved</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Large_Memory_Limit__c</fullName>
        <label>Large - Memory Limit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Large_Memory_Reserved__c</fullName>
        <label>Large - Memory Reserved</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Large_Storage__c</fullName>
        <label>Large - Storage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <label>Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_of_backup_stored_in_the_cloud__c</fullName>
        <label>Level of backup stored in the cloud</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <defaultValue>false</defaultValue>
        <label>License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MACDTypeOnOpp__c</fullName>
        <formula>IF(ISPICKVAL(Deal__r.MACD_Type__c,&quot;A&quot;),&quot;A&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MACDTypeOnOpp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MACD_Change_Category__c</fullName>
        <label>MACD Change Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vlan Level Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MACD_Change_Name__c</fullName>
        <label>MACD Change Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add Vlan</fullName>
                </value>
                <value>
                    <fullName>Disconnect Vlan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MACD_Change_Type__c</fullName>
        <label>MACD Change Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add Vlan</fullName>
                </value>
                <value>
                    <fullName>Disconnect Vlan</fullName>
                </value>
                <value>
                    <fullName>UBB Add</fullName>
                </value>
                <value>
                    <fullName>UBB Change</fullName>
                </value>
                <value>
                    <fullName>UBB Remove</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MACD_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MACD Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MACD_Price_Compare__c</fullName>
        <description>It Stores Present SpProduct and Previous SpProduct Difference.</description>
        <label>MACD Price Compare</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MACD_Type__c</fullName>
        <description>“N” - New Start,

·        &quot;M&quot; - Move

·        &quot;A&quot; – Add

·        “C” – Change Request

·        “D” – Disconnect

·        “R” – Records only (in future if we ever have to do any data migration etc, we will have a records only update action).</description>
        <label>MACD Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>SD</fullName>
                </value>
                <value>
                    <fullName>HD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MAC_Addresses__c</fullName>
        <label>MAC Addresses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBC_Counter__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MBC Counter</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MBC_Overage_Charge__c</fullName>
        <label>MBC Overage Charge</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBC_Speed__c</fullName>
        <label>MBC Speed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCN_SOC_GRC_Access__c</fullName>
        <formula>Deal__r.MCN_SOC_GRC_Access__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MCN/SOC/GRC (Access)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCN_SOC_GRC_Service__c</fullName>
        <formula>MCN_Serivce__c &amp;&quot;/&quot;&amp;SOC_Service__c&amp;&quot;/&quot;&amp;GRC_Service__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MCN/SOC/GRC (Service)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCN_Serivce__c</fullName>
        <label>MCN (Service)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOS__c</fullName>
        <label>MOS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRA_Number__c</fullName>
        <formula>Deal__r.Account.MRA_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MRA Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRC_Discountable__c</fullName>
        <description>It&apos;s the cumulative of discountable MRC list price</description>
        <label>MRC Discountable</label>
        <summarizedField>Product_Pricing__c.list_price__c</summarizedField>
        <summaryFilterItems>
            <field>Product_Pricing__c.type__c</field>
            <operation>equals</operation>
            <value>MRC</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Product_Pricing__c.Discountable__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Product_Pricing__c.SP_Product__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MRC_Discounted_Price__c</fullName>
        <label>MRC Discounted Price</label>
        <summarizedField>Product_Pricing__c.discounted_price__c</summarizedField>
        <summaryFilterItems>
            <field>Product_Pricing__c.type__c</field>
            <operation>equals</operation>
            <value>MRC</value>
        </summaryFilterItems>
        <summaryForeignKey>Product_Pricing__c.SP_Product__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MRC_Non_Discountable__c</fullName>
        <description>It&apos;s cumulative list price of Non - Discountable MRC</description>
        <label>MRC Non-Discountable</label>
        <summarizedField>Product_Pricing__c.list_price__c</summarizedField>
        <summaryFilterItems>
            <field>Product_Pricing__c.type__c</field>
            <operation>equals</operation>
            <value>MRC</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Product_Pricing__c.Discountable__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Product_Pricing__c.SP_Product__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Mailing_Street_Address__c</fullName>
        <label>Mailing Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Managed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Managed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Management__c</fullName>
        <label>Management</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Deal_Reg_Number__c</fullName>
        <description>This is a technical field to capture Deal Registration Number from Master Opportunity. Not required on Page Layout.</description>
        <formula>Deal__r.BID_ID__c</formula>
        <label>Master Deal Reg Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Data_Storage__c</fullName>
        <label>Maximum Data Storage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Med_CPU_Limit__c</fullName>
        <label>Medium - CPU Limit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Med_CPU_Reserved__c</fullName>
        <label>Medium - CPU Reserved</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Med_Memory_Limit__c</fullName>
        <label>Medium - Memory Limit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Med_Memory_Reserved__c</fullName>
        <label>Medium - Memory Reserved</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Med_Storage__c</fullName>
        <label>Medium - Storage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Memory_Limit__c</fullName>
        <label>Small - Memory Limit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Memory_Price__c</fullName>
        <label>Memory Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Memory_Product_Name__c</fullName>
        <label>Memory Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Memory_Reserved__c</fullName>
        <label>Small - Memory Reserved</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Memory_SKUID__c</fullName>
        <label>Memory SKUID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAT_rules_configured_on_the_network__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NAT rules configured on the network?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NBFW_be_in_use_with_User_UAuth__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NBFW be in use with User UAuth?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NC_Code__c</fullName>
        <label>NC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NRC_Discountable__c</fullName>
        <description>This field consists of the cumulative list price of NRC which is discountabel</description>
        <label>NRC Discountable</label>
        <summarizedField>Product_Pricing__c.list_price__c</summarizedField>
        <summaryFilterItems>
            <field>Product_Pricing__c.type__c</field>
            <operation>equals</operation>
            <value>NRC</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Product_Pricing__c.Discountable__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Product_Pricing__c.SP_Product__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NRC_Discounted_Price__c</fullName>
        <label>NRC Discounted Price</label>
        <summarizedField>Product_Pricing__c.discounted_price__c</summarizedField>
        <summaryFilterItems>
            <field>Product_Pricing__c.type__c</field>
            <operation>equals</operation>
            <value>NRC</value>
        </summaryFilterItems>
        <summaryForeignKey>Product_Pricing__c.SP_Product__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NRC_Non_Discountable__c</fullName>
        <description>It&apos;s cumulative list price of non discountable NRC</description>
        <label>NRC Non-Discountable</label>
        <summarizedField>Product_Pricing__c.list_price__c</summarizedField>
        <summaryFilterItems>
            <field>Product_Pricing__c.type__c</field>
            <operation>equals</operation>
            <value>NRC</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Product_Pricing__c.Discountable__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Product_Pricing__c.SP_Product__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Named_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Named Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Network_TypeASE__c</fullName>
        <label>Network Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_Type__c</fullName>
        <label>Network Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Class_of_Service__c</fullName>
        <label>New Class of Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Committed_Information_Rate_Price__c</fullName>
        <label>New Committed Information Rate Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Committed_Information_Rate__c</fullName>
        <label>New Committed Information Rate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Interface_Type__c</fullName>
        <label>New Interface Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Local_Phone_Numbers__c</fullName>
        <label>New Local Phone Numbers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_MAC_Addresses__c</fullName>
        <label>New MAC Addresses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_NC_Code__c</fullName>
        <label>New NC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_SPEC_Code__c</fullName>
        <label>New SPEC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Virtual_Phone_Numbers__c</fullName>
        <label>New Virtual Phone Numbers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Of_Licenses__c</fullName>
        <label>No. Of Licenses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>